# quantdigger

./: .gitignore  CMakeLists.txt  README.md  README.rst  analyze.py  data.py  demo_test.py  dependency.py  doxyfile  full_install.py  install.py  install_pip.py  k.py  ktrader.py  requirements.txt  setup.py  stock_plot.py  update  update.rst  widgets.py
ctp/: ThostFtdcMdApi.h  ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
ctp_demo/: CMakeLists.txt  CSem.cpp  CSem.h  Main.cpp  error.xml
ctpdemo/: CtpTraderSpi.cpp  CtpTraderSpi.h
data/trace/: entry_IF000.csv  (+1 more)
demo/: import_mongo.py  log  main.py  mainwindow.py  manytomany.py  mongotest.py  mplot_demo.py  plot_ma.py  plot_strategy.py  profile_strategy.py  search2.py  stg_demo.py  stock_search.py
doc/: context.md  datasource.md  datastruct.md
docs/: install.md  strategy_demo1.md
easyquant/: CMakeLists.txt
easyquant/ctp/: ThostFtdcUserApiDataType.h
easyquant/ctpdemo/: CMakeLists.txt  CSem.h  CtpTraderSpi.cpp  CtpTraderSpi.h  ctpserver.cpp  ctpserver.h  ctptrader.cpp  ctptrader.h  main.cpp
easyquant/engine/: CMakeLists.txt  algorithmsimulator.cpp  algorithmsimulator.h  blotter.cpp  blotter.h  datasource.cpp  datasource.h  datatype.h  order.h  series.h  tradingalgorithm.cpp  tradingalgorithm.h
easyquant/eqlanguage/: definition.h
easyquant/strategy/: .test.cpp.swp  talgo.cpp  talgo.h  test.cpp
easyquant/strategyanalyzer/: 3d.py  entry_3d.py
easyquant/technical/: average.cpp  function.h
easyquant/util/: .logger.cpp.swp  .logger.h.swp  CMakeLists.txt  csv.h  logger.cpp  logger.h  test.cpp
engine/: algorithmsimulator.cpp  algorithmsimulator.h  blotter.h  datasource.cpp  datasource.h  datatype.h  main.cpp  order.h  tradingalgorithm.cpp  tradingalgorithm.h
eqlanguage/: definition.h
quantdigger/: CMakeLists.txt  __init__.py  config.py  configutil.py  datastruct.py  errors.py  gate.py  main.py  mplot_demo.py  run.py  serialize.py  tags  util.py
quantdigger/client/strategy/: CMakeLists.txt  talgo.cpp  talgo.h
requirements/: requirements.txt  tests.txt
setupscripts/: TA_Lib-0.4.9-cp27-none-win32.whl  TA_Lib-0.4.9-cp27-none-win_amd64.whl  dependency.py  install_dependency.py  util.py
strategy/: CMakeLists.txt  Order.h  doxyfile  talgo.cpp  talgo.h  test.cpp
strategy/Doc/html/: AlgorithmSimulator_8h.html  AlgorithmSimulator_8h_source.html  DataSource_8h.html  DataSource_8h_source.html  Event_8h.html  Event_8h_source.html  Order_8h.html  Order_8h__incl.dot  Order_8h__incl.md5  Order_8h_source.html  PerformanceTracker_8h.html  PerformanceTracker_8h_source.html  Period_8h.html  Period_8h_source.html  Slippage_8h.html  Slippage_8h_source.html  TradingAlgorithm_8h.html  TradingAlgorithm_8h_source.html  TradingEnvironment_8h.html  TradingEnvironment_8h_source.html  Transaction_8h.html  Transaction_8h_source.html  Util_8h.html  Util_8h_source.html  annotated.html  classOrder-members.html  classOrder.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  graph_legend.html  index.html
strategy/Doc/html/search/: all_61.js  all_64.js  all_6f.js  all_70.js  all_74.js  all_75.js  classes_6f.js  enums_6f.js  enumvalues_6b.js  files_64.js  files_65.js  files_6f.js  files_73.js  functions_6f.js  search.js  variables_64.js  variables_69.js  variables_6b.js
technical/: CMakeLists.txt  function.h
test/: kdata.csv  signal.csv
tests/: csv_main.py  import_data.py  log  sql_main.py  test_data.py  test_engine.py  test_engine_vector.py  test_eventengine.py  test_future.py  test_rabbitmq_speed.py  test_rpc.py  test_stock.py  test_zmq_speed.py
util/: CMakeLists.txt  csv.cpp
wiki/: README.md  install.md  interaction.md  match.md  more_strategy.md  paint.md  series.md  strategy_demo1.md  technical.md  ui.md
(+2056 files in other folders)
